--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,5 @@
-# # references:
-# # * https://www.objc.io/issues/6-build-tools/travis-ci/
-# # * https://github.com/supermarin/xcpretty#usage
-
-# osx_image: xcode7.3
-# language: objective-c
-# # cache: cocoapods
-# # podfile: Example/Podfile
-# # before_install:
-# # - gem install cocoapods # Since Travis is not always on latest version
-# # - pod install --project-directory=Example
-# script:
-# - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SummerPlayerView.xcworkspace -scheme SummerPlayerView-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-# - pod lib lint
-
-
-language: objective-c
+language: swift
 osx_image: xcode11
+xcode_workspace: Example/SummerPlayerView.xcworkspace
 script:
-  - xcodebuild  
+  - xcodebuild clean && xcodebuild build -sdk iphonesimulator13.0 -workspace Example/SummerPlayerView.xcworkspace -scheme SummerPlayerView_Example CODE_SIGNING_REQUIRED=NO
